--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,11 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title no-anchor">
-            {{ site.title }}
+	    {% if page.title == "Home" %}
+	      {{ site.title }}
+	    {% else %}
+	      {{ page.title }}
+	    {% endif %}
             <br><small>{{ site.tagline }}</small>
           </h3>
         </div>
