--- a/_includes/sidebar-ja.html
+++ b/_includes/sidebar-ja.html
@@ -31,53 +31,53 @@
   </nav>
 
 <ul>
-  <li><a href="/#why-are-you-writing-this">なぜこれを書いているのか</a></li>
-  <li><a href="/#why-did-you-create-wiring">Wiringを作ったのはなぜなのか</a></li>
-  <li><a href="/#how-was-wiring-created">なぜWiringは作られたのか？</a>    <ul>
-      <li><a href="/#the-language">プログラミング言語</a></li>
-      <li><a href="/#the-hardware">ハードウェア</a>        <ul>
-          <li><a href="/#prototype-1">試作1号</a></li>
-          <li><a href="/#prototype-2">試作2号</a></li>
-          <li><a href="/#prototype-3">試作3号</a></li>
+  <li><a href="#section" id="markdown-toc-section">なぜこれを書いているのか</a></li>
+  <li><a href="#wiring" id="markdown-toc-wiring">Wiringを作ったのはなぜなのか</a></li>
+  <li><a href="#wiring-1" id="markdown-toc-wiring-1">なぜWiringは作られたのか？</a>    <ul>
+      <li><a href="#section-1" id="markdown-toc-section-1">プログラミング言語</a></li>
+      <li><a href="#section-2" id="markdown-toc-section-2">ハードウェア</a>        <ul>
+          <li><a href="#section-3" id="markdown-toc-section-3">試作1号</a></li>
+          <li><a href="#section-4" id="markdown-toc-section-4">試作2号</a></li>
+          <li><a href="#section-5" id="markdown-toc-section-5">試作3号</a></li>
         </ul>
       </li>
-      <li><a href="/#continuing-the-development">開発の継続</a></li>
-      <li><a href="/#first-major-success---strangely-familiar">最初の大きな成功ーStrangely Familiar</a></li>
-      <li><a href="/#the-rest-of-the-world">他の国</a></li>
+      <li><a href="#section-6" id="markdown-toc-section-6">開発の継続</a></li>
+      <li><a href="#strangely-familiar" id="markdown-toc-strangely-familiar">最初の大きな成功ーStrangely Familiar</a></li>
+      <li><a href="#section-7" id="markdown-toc-section-7">他の国</a></li>
     </ul>
   </li>
-  <li><a href="/#when-did-arduino-begin-and-why-werent-you-a-member-of-the-arduino-team">Arduinoはいつはじまったのか、なぜArduinoチームのメンバーでないのか</a>    <ul>
-      <li><a href="/#the-formation-of-arduino">Arduinoの形成</a></li>
+  <li><a href="#arduinoarduino" id="markdown-toc-arduinoarduino">Arduinoはいつはじまったのか、なぜArduinoチームのメンバーでないのか</a>    <ul>
+      <li><a href="#arduino" id="markdown-toc-arduino">Arduinoの形成</a></li>
     </ul>
   </li>
-  <li><a href="/#did-the-arduino-team-work-with-wiring-before-arduino">Arduinoチームは、Arduinoの前にWiringと一緒に仕事をしたのか</a></li>
-  <li><a href="/#what-is-programma2003-and-how-is-it-related-to-you-or-to-wiring">Programma2003とは何か、これと私やWiringとの関わり</a></li>
-  <li><a href="/#why-hasnt-arduino-acknowledged-wiring-better">なぜArduinoはWiringをもっと認めてこなかったのですか？</a></li>
-  <li><a href="/#the-plaintiff-vs-the-defendant">原告と被告</a></li>
-  <li><a href="/#continuous-misleading-information">続く紛らわしい情報</a>    <ul>
-      <li><a href="/#the-infamous-diagram">不名誉な図解</a></li>
-      <li><a href="/#the-arduino-documentary">Arduinoドキュメンタリー</a></li>
+  <li><a href="#arduinoarduinowiring" id="markdown-toc-arduinoarduinowiring">Arduinoチームは、Arduinoの前にWiringと一緒に仕事をしたのか</a></li>
+  <li><a href="#programma2003wiring" id="markdown-toc-programma2003wiring">Programma2003とは何か、私やWiringとの関わり</a></li>
+  <li><a href="#arduinowiring" id="markdown-toc-arduinowiring">なぜArduinoはWiringをもっと認めてこなかったのですか？</a></li>
+  <li><a href="#section-8" id="markdown-toc-section-8">原告と被告</a></li>
+  <li><a href="#section-9" id="markdown-toc-section-9">誤解させる情報の継続</a>    <ul>
+      <li><a href="#section-10" id="markdown-toc-section-10">不名誉な図解</a></li>
+      <li><a href="#arduino-1" id="markdown-toc-arduino-1">Arduinoドキュメンタリー</a></li>
     </ul>
   </li>
-  <li><a href="/#absence-of-recognition-beyond-wiring">Wiring以外の認識の欠如</a></li>
-  <li><a href="/#distorted-public-information">歪んだ公開情報</a>    <ul>
-      <li><a href="/#poor-journalism">お粗末なジャーナリズム</a>        <ul>
-          <li><a href="/#wired">Wired</a></li>
-          <li><a href="/#ieee-spectrum">IEEE Spectrum</a></li>
-          <li><a href="/#circuits-today">Circuits Today</a></li>
-          <li><a href="/#makezine">Makezine</a></li>
+  <li><a href="#section-11" id="markdown-toc-section-11">その他の寄与の無視</a></li>
+  <li><a href="#section-12" id="markdown-toc-section-12">歪められた公開情報</a>    <ul>
+      <li><a href="#section-13" id="markdown-toc-section-13">お粗末なジャーナリズム</a>        <ul>
+          <li><a href="#wired" id="markdown-toc-wired">Wired</a></li>
+          <li><a href="#ieee-spectrum" id="markdown-toc-ieee-spectrum">IEEE Spectrum</a></li>
+          <li><a href="#circuits-today" id="markdown-toc-circuits-today">Circuits Today</a></li>
+          <li><a href="#makezine" id="markdown-toc-makezine">Makezine</a></li>
         </ul>
       </li>
-      <li><a href="/#academic-mistakes">学術的な誤り</a></li>
+      <li><a href="#section-14" id="markdown-toc-section-14">学術的な誤り</a></li>
     </ul>
   </li>
-  <li><a href="/#more-links-for-your-perusal">精査のためのリンク集</a>    <ul>
-      <li><a href="/#articles-about-arduino-vs-arduino">「Arduino対Arduino」に関する記事</a></li>
-      <li><a href="/#video">ビデオ</a></li>
+  <li><a href="#section-15" id="markdown-toc-section-15">精査のためのリンク集</a>    <ul>
+      <li><a href="#arduinoarduino-1" id="markdown-toc-arduinoarduino-1">「Arduino対Arduino」に関する記事</a></li>
+      <li><a href="#section-16" id="markdown-toc-section-16">ビデオ</a></li>
     </ul>
   </li>
-  <li><a href="/#thank-you">ありがとう！</a></li>
-  <li><a href="/#index">Index</a></li>
+  <li><a href="#section-17" id="markdown-toc-section-17">ありがとう！</a></li>
+  <li><a href="#index" id="markdown-toc-index">Index</a></li>
 </ul>
 
   <span class="sidebar-nav-item">現在のバージョン：{{ site.version }}</span>
